# Liu-kata-go-game-cpp

./: CMakeLists.txt  README.md  index.html  main.cpp  package_katago.ps1  test_api.ps1  test_builtin.ps1  test_complete.ps1  test_extended.ps1  test_frontend.ps1  test_full.ps1  test_katago.ps1  test_move.ps1  test_move_debug.ps1  test_turn.ps1  test_turn2.ps1
KataGoData/opencltuning/: tune11_gpuNVIDIAGeForceRTX5060LaptopGPU_x19_y19_c128_mv8.txt
Project_seven_katago/: Makefile  build.bat  main.cpp
templates/: index.html
